--- a/index.html
+++ b/index.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Compliance Checker</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AI Compliance Checker</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<div class="container">
-    <h2>Document Compliance Checker 🤖</h2>
-    <p>Upload your RFQ and Proposal files (PDF, DOCX, or TXT) for an AI compliance score and improvement plan.</p>
+  <div class="container">
+    <h1>AI Compliance Checker</h1>
+    <p>Upload your <strong>RFQ</strong> and <strong>Proposal</strong> documents below to analyze compliance.</p>
 
-    <label for="rfqFile">1. Upload RFQ Document:</label>
-    <input type="file" id="rfqFile" accept=".pdf,.docx,.doc,.txt">
+    <form id="uploadForm">
+      <div class="file-group">
+        <label for="rfqFile">📄 RFQ Document:</label>
+        <input type="file" id="rfqFile" accept=".txt,.pdf,.docx" required />
+      </div>
 
-    <label for="proposalFile">2. Upload Proposal Document:</label>
-    <input type="file" id="proposalFile" accept=".pdf,.docx,.doc,.txt">
+      <div class="file-group">
+        <label for="proposalFile">📄 Proposal Document:</label>
+        <input type="file" id="proposalFile" accept=".txt,.pdf,.docx" required />
+      </div>
 
-    <button id="checkComplianceButton">Check Compliance</button>
+      <button type="submit" id="analyzeButton">🔍 Run Compliance Check</button>
+    </form>
 
-    <p id="status">Ready to check compliance...</p>
-    <div id="resultArea">Your detailed compliance report will appear here.</div>
-</div>
+    <div id="loading" class="loading">Processing files and running AI comparison... This may take up to 30 seconds.</div>
 
-<script src="script.js"></script>
+    <div id="result" class="result"></div>
+  </div>
+
+  <footer>
+    <p>Powered by <strong>Gemini AI</strong> — Render Deployment</p>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
